--- a/eks1.yaml
+++ b/eks1.yaml
@@ -7,4 +7,4 @@ managedNodeGroups:
   - name: roboshop
     instanceTypes: ["m5.large", "c3.large", "c4.large", "c5.large"]
     desiredCapacity: 3
-    spot: 3
+    spot: true
