--- a/04-label.yaml
+++ b/04-label.yaml
@@ -7,6 +7,9 @@ metadata:
     component: mysql
     tier: backend
     environment: dev
+  annotations:
+    description: "This pod is created to demonstrate pod annotations"
+    jenkins: "https://jenkins.com/build/roboshop-catalogue/3"
 spec:
   containers:
   - name: nginx
