--- a/08-config.yaml
+++ b/08-config.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pod-Config
+  name: pod-config
   labels:
-    purpose: Config
+    purpose: config
     env: dev
 data:
   COURSE: "Devops with AWS"
