--- a/11-secret.yaml
+++ b/11-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     purpose: secret
     env: dev
-  type: opaque
+type: Opaque
 data:
     username: "YWRtaW4="
     password: "YWRtaW4zMjE="
