--- a/12-pod-secret.yaml
+++ b/12-pod-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   purpose: secret-access
 spec:
   containers:
-    name: nginx
+  - name: nginx
     image: nginx
     envFrom:
     - secretRef:
