--- a/12-pod-secret.yaml
+++ b/12-pod-secret.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod-secret-demo
-  purpose: secret-access
+  labels:
+    purpose: secret-access
 spec:
   containers:
   - name: nginx
