--- a/14-node.yaml
+++ b/14-node.yaml
@@ -6,7 +6,7 @@ metadata:
     purpose: service-np-demo
 spec:
   type: NodePort
-  selectors:
+  selector:
     purpose: service-np-demo
     project: roboshop
     environment: dev
@@ -14,7 +14,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-
+---
 apiVersion: v1
 kind: Pod
 metadata:
