--- a/16-replica.yaml
+++ b/16-replica.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: ReplicaSets
+kind: ReplicaSet
 metadata:
   name: nginx
   labels:
@@ -7,7 +7,7 @@ metadata:
     project: roboshop
     app: nginx
 spec:
-  replica: 3
+  replicas: 3
   selector:
     matchLabels:
       purpose: rs-demo
