--- a/17-deployement.yaml
+++ b/17-deployement.yaml
@@ -23,6 +23,6 @@ spec:
         project: roboshop
         app: nginx
     spec:
-      containdeployement-demo:
+      containers:
       - name: nginx
         image: nginx:stable-alpine3.23-perl
