--- a/k8-resources/volumes/ebs-dynamic.yaml
+++ b/k8-resources/volumes/ebs-dynamic.yaml
@@ -29,4 +29,4 @@ spec:
   volumes:
   - name: persistent-storage
     persistentVolumeClaim:
-      claimName: ebs-dynamic
+      claimName: roboshop-ebs
