--- a/k8-resources/volumes/04-efs-static.yaml
+++ b/k8-resources/volumes/04-efs-static.yaml
@@ -25,3 +25,37 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+  labels:
+    purpose: efs-static-demo
+    project: roboshop
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts:
+    - name: persistent-storage
+      mountPath: /usr/share/nginx/html
+    volumes:
+    - name: persistent-storage
+      PersistentVolumeClaim:
+        claimName: efs-static
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: efs-static-demo
+  project: roboshop
+spec:
+  type: LoadBalancer
+  selector:
+    project: efs-static-demo
+    project: roboshop
+  ports:
+    - protocol: TCP
+      port: 80 #service port
+      targetPort: 80 # container port
