--- a/k8-resources/volumes/04-efs-static.yaml
+++ b/k8-resources/volumes/04-efs-static.yaml
@@ -48,7 +48,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: efs-static-demo
+  name: efs-static
   project: roboshop
 spec:
   type: LoadBalancer
