--- a/k8-resources/volumes/04-efs-static.yaml
+++ b/k8-resources/volumes/04-efs-static.yaml
@@ -49,11 +49,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: efs-static
-  project: roboshop
+  labels:
+    purpose: efs-static-demo
+    project: roboshop
 spec:
   type: LoadBalancer
   selector:
-    project: efs-static-demo
+    purpose: efs-static-demo
     project: roboshop
   ports:
     - protocol: TCP
