--- a/k8-resources/volumes/06-efs-dynamic.yaml
+++ b/k8-resources/volumes/06-efs-dynamic.yaml
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: service
 metadata:
-  name: efs-static
+  name: efs-dynamic
   labels:
     purpose: efs-dynamic-demo
     project: roboshop
