--- a/k8-resources/volumes/06-efs-dynamic.yaml
+++ b/k8-resources/volumes/06-efs-dynamic.yaml
@@ -31,7 +31,7 @@ spec:
         claimName: efs-dynamic
 ---
 apiVersion: v1
-kind: service
+kind: Service
 metadata:
   name: efs-dynamic
   labels:
