--- a/k8-resources/volumes/06-efs-dynamic.yaml
+++ b/k8-resources/volumes/06-efs-dynamic.yaml
@@ -5,7 +5,7 @@ metadata:
   name: efs-dynamic
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: efs-roboshop
   resources:
     requests:
