--- a/k8-resources/volumes/06-efs-dynamic.yaml
+++ b/k8-resources/volumes/06-efs-dynamic.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: efs-roboshop
+  storageClassName: "efs-roboshop"
   resources:
     requests:
       storage: 5Gi
