--- a/k8-resources/volumes/efs/efs-static.yaml
+++ b/k8-resources/volumes/efs/efs-static.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: efs-staic
+  name: efs-static
 spec:
   capacity:
     storage: 5Gi
@@ -43,7 +43,7 @@ spec:
   volumes:
   - name: persistant-storage
     persistentVolumeClaim:
-      claimName: efs-staic
+      claimName: efs-static
 ---
 apiVersion: v1
 kind: Service
