--- a/k8-resources/volumes/efs/efs-static.yaml
+++ b/k8-resources/volumes/efs/efs-static.yaml
@@ -29,7 +29,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: efs-static
+  name: nginx
   labels:
     purpose: efs-static-demo
     project: roboshop
