--- a/k8-resources/volumes/efs/sc.yaml
+++ b/k8-resources/volumes/efs/sc.yaml
@@ -3,6 +3,7 @@ apiVersion: storage.k8s.io/v1
 metadata:
   name: efs-roboshop
 provisioner: efs.csi.aws.com
+reclaimPolicy: Retain
 parameters:
   provisioningMode: efs-ap
   fileSystemId: fs-0d4d7d53211014e90
