--- a/k8-resources/volumes/efs/efs-dynamic.yaml
+++ b/k8-resources/volumes/efs/efs-dynamic.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ""
+  storageClassName: "efs-roboshop"
   resources:
     requests:
       storage: 5Gi
