--- a/k8-resources/volumes/efs/statefulset.yaml
+++ b/k8-resources/volumes/efs/statefulset.yaml
@@ -32,7 +32,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: sc-headless
+  name: sc-headless-svc
 spec:
   selector:
     matchLabels:
