--- a/k8-resources/volumes/efs/statefulset.yaml
+++ b/k8-resources/volumes/efs/statefulset.yaml
@@ -59,7 +59,7 @@ spec:
       name: www
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "efs-roboshop"
+      storageClassName: efs-roboshop
       resources:
         requests:
           storage: 2Gi
